--- a/static/style.css
+++ b/static/style.css
@@ -43,3 +43,21 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.bg-dark{
+  background-color: #333;
+  color: #fff;
+}
+
+.jumbotron {
+    padding: 0.5em 0.6em;
+    h1 {
+        font-size: 2em;
+    }
+    p {
+        font-size: 1.2em;
+        .btn {
+            padding: 0.5em;
+        }
+    }
+}
