--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,22 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Apotek RSUD Cilacap</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        {% if 'username' in session: %}
+        <li><a href="/admin">{{session['username']}}</a></li>
+        <li><a id="logout" href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        {% else %}
+        <li><a href="/admin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
+  <div class="container wrapper">
     <form id="login" method="post" class="form-signin">
       <h2 class="form-signin-heading">Please login</h2>
       <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" />
