--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Apotek RSUD Cilacap</a>
+        <a class="navbar-brand" href="/">Apotek RSUD Cilacap</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         {% if 'username' in session: %}
