--- a/templates/login.html
+++ b/templates/login.html
@@ -34,6 +34,7 @@
   <div class="container wrapper">
     <form id="login" method="post" class="form-signin">
       <h2 class="form-signin-heading">Please login</h2>
+      <div id="error-message" style="display:none;" class="alert alert-warning" role="alert"></div>
       <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" />
       <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
