--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,10 @@
       <div class="jumbotron">
         <h1>RSUD Cilacap</h1>
         <p>Jl. Gatot Subroto No.28, Gunungsimping, Cilacap Tengah, Kabupaten Cilacap, Jawa Tengah 53211</p>
+        <div class="alert alert-warning" role="alert">
+          Tampilan nomor antrian ini hanya untuk nomor antrian pada hari ini. Untuk pengambilan obat hari sebelumnya silahkan langsung ke
+          petugas. Terima kasih :)
+        </div>
       </div>
     </div>
     <table class="table table-bordered">
