change format tanggal

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
       <thead>
         <tr class="bg-dark">
           <th scope="col">Nomor Antrian</th>
-          <th scope="col">Tanggal</th>
+          <th scope="col">Tanggal / Jam</th>
           <th scope="col">Status</th>
         </tr>
       </thead>
