--- a/templates/index.html
+++ b/templates/index.html
@@ -39,12 +39,20 @@
   </nav>
   <div class="container wrapper">
     <div class="container">
-      <div class="jumbotron">
-        <h1>RSUD Cilacap</h1>
-        <p>Jl. Gatot Subroto No.28, Gunungsimping, Cilacap Tengah, Kabupaten Cilacap, Jawa Tengah 53211</p>
-        <div class="alert alert-warning" role="alert">
-          Tampilan nomor antrian ini hanya untuk nomor antrian pada hari ini. Untuk pengambilan obat hari sebelumnya silahkan langsung ke
-          petugas. Terima kasih :)
+      <div class="row">
+        <div class="col-md-4">
+          <img src="{{ url_for('static', filename='logo.png') }}" />
+        </div>
+        <div class="col-md-8">
+          <div class="jumbotron">
+            <h1>RSUD Cilacap</h1>
+            <p>Jl. Gatot Subroto No.28, Gunungsimping, Cilacap Tengah, Kabupaten Cilacap, Jawa Tengah 53211</p>
+            <div class="alert alert-warning" role="alert">
+              Tampilan nomor antrian ini hanya untuk nomor antrian pada hari ini. Untuk pengambilan obat hari sebelumnya silahkan
+              langsung ke
+              petugas. Terima kasih :)
+            </div>
+          </div>
         </div>
       </div>
     </div>
