--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
   </nav>
   <div class="container wrapper">
     <div class="container">
-      <div class="row">
-        <div class="col-md-2">
+      <div class="row mb-2">
+        <div class="col-md-2 mx-auto">
           <img src="{{ url_for('static', filename='logo.png') }}" />
         </div>
         <div class="col-md-10">
