--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
   </nav>
   <div class="container wrapper">
     <div class="container">
-      <div class="row mb-2">
-        <div class="col-md-2 mx-auto">
+      <div class="row mb-md-2">
+        <div class="col-md-2 text-center">
           <img src="{{ url_for('static', filename='logo.png') }}" />
         </div>
         <div class="col-md-10">
@@ -56,7 +56,7 @@
         </div>
       </div>
     </div>
-    <table class="table table-bordered">
+    <table class="table table-bordered" style="margin-top: 20px;">
       <thead>
         <tr class="bg-dark">
           <th scope="col">Nomor Antrian</th>
