--- a/templates/admin.html
+++ b/templates/admin.html
@@ -54,6 +54,7 @@
     {% if 'role' in session and session['role'] == 'admin': %}
     <button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#add-user"><span class="glyphicon glyphicon-plus"></span>  Tambah User</button>
     {% endif %}
+    <button type="button" class="btn btn-primary btn-md" disabled="">2 pengunjung</button>
     <div style="margin:10px"></div>
     <table class="table table-bordered">
       <thead>
