--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,8 +20,10 @@
   </script>
   <script type="text/javascript">
     load_recipe_admin()
+    load_visitor_count()
     window.setInterval(function(){
       load_recipe_admin()
+      load_visitor_count()
     }, 5000);
   </script>
   {% endblock %}
@@ -54,7 +56,7 @@
     {% if 'role' in session and session['role'] == 'admin': %}
     <button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#add-user"><span class="glyphicon glyphicon-plus"></span>  Tambah User</button>
     {% endif %}
-    <button type="button" class="btn btn-primary btn-md" disabled="">2 pengunjung</button>
+    <button type="button" class="btn btn-primary btn-md" disabled><span class="glyphicon glyphicon-eye-open" ></span>  <span id="visitor-count"></span> Pengunjung</button>
     <div style="margin:10px"></div>
     <table class="table table-bordered">
       <thead>
